WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281728
[css-anchor-position-1] Fix intrinsic layout of anchor-positioned element after visibility change
https://bugs.webkit.org/show_bug.cgi?id=281728
Summary
[css-anchor-position-1] Fix intrinsic layout of anchor-positioned element aft...
Pawel Lampe
Reported
2024-10-18 00:40:22 PDT
This is reproduced by layout test: imported/w3c/web-platform-tests/css/css-anchor-position/position-anchor-target-with-children.html [ ImageOnlyFailure ] The problem is - when element becomes visible again, render subtree of its intrisic elements is not being re-created i.e. its children have no renderers and thus are invisible.
Attachments
Add attachment
proposed patch, testcase, etc.
Pawel Lampe
Comment 1
2024-10-18 01:53:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35418
EWS
Comment 2
2024-10-20 11:46:46 PDT
Committed
285486@main
(8a011645e7ae): <
https://commits.webkit.org/285486@main
> Reviewed commits have been landed. Closing PR #35418 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-10-20 11:47:13 PDT
<
rdar://problem/138281616
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug