[css-anchor-position-1] Fix intrinsic layout of anchor-positioned element after visibility change https://bugs.webkit.org/show_bug.cgi?id=281728

Reviewed by Antti Koivisto.

Since style resolution is not being done in one pass when anchoring is used, block elements hold its children resolution until resolving anchors is done.
In that case - when it finally happens - the resolution of block element children is not enforced (as it would be during 1st pass) and the children are
not willing to "force update" and create renderers in the process. The net outcome is that children of elements that became visible again, are not rendered.

This change fixes the above issue by extending one of the conditions that leads to creation of renderers when the resolution is deferred due to anchoring.

* LayoutTests/TestExpectations:
* Source/WebCore/style/StyleTreeResolver.cpp:
(WebCore::Style::TreeResolver::determineResolutionType):

Canonical link: https://commits.webkit.org/285486@main